# AudioRecorder

./: AndroidManifest.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/audiorecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  native-lib.cpp
app/src/main/cpp/flac/src/libFLAC/: format.c
app/src/main/cpp/jni/: FLACStreamDecoder.cpp  FLACStreamEncoder.cpp
app/src/main/java/com/example/audiorecorder/: MainActivity.java  WavEncoder.java
res/layout/: activity_main.xml
res/values/: strings.xml
src/com/example/audiorecorder/: AmpableEncoder.java  AudioRecorder.java  CompositeEncoder.java  Encoder.java  EncoderFactory.java  FLACEncoder.java  IAmplitude.java  MainActivity.java  PCMPlayer.java
